--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^3.0.1",
     "uuid": "^7.0.3",
     "web3": "^1.2.6"
   },
