--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.0.2",
     "eth-gas-reporter": "^0.2.17",
+    "readline": "^1.3.0",
     "uuid": "^7.0.3",
     "web3": "^1.2.9"
   },
