--- a/management-console/package.json
+++ b/management-console/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "bignumber.js": "^9.0.0",
     "dotenv": "^8.2.0",
     "inquirer": "^7.2.0",
     "minimist": "^1.2.5",
