--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.0.2",
+    "@truffle/hdwallet-provider": "^1.0.42",
+    "dotenv": "^8.2.0",
     "eth-gas-reporter": "^0.2.17",
     "readline": "^1.3.0",
     "uuid": "^7.0.3",
